[package]
name = "bastion_showcase"
version = "0.1.0"
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# runtime crates
bastion = "0.4.4"
tokio = { version = "1.13.0", features = ["full"] }

# util crates
num_cpus = "1.13.0"
serde = { version = "1.0", features = ["derive"] }

# client crates
reqwest = { version = "0.11", features = ["json"] }

# server crates
warp = "0.3"
tide = "0.16.0"
